# Beezly

./: .env.example  .env.test  .gitignore  DEVELOPER_SETUP.md  README.md  devwashere-20250702.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci-cd.yml  database-migration-check.yml  deploy.md  discord-notifications.yml  install-deps.sh
apps/ai/: .gitignore  README.md
apps/ai/jupyter/: 20250707_01_test.ipynb  modal_app.py
apps/ai/price-project/: README.md  download_model.py  main.py  modal_app.py
apps/ai/production-langgraph/: hello.py  pyproject.toml  requirements.txt  setup_env.sh
apps/api/: .env.example  .env.local.example  .env.production.example  .env.staging.example  .env.test  .env.test.example  .gitignore  AUTH_USAGE_GUIDE.md  DATABASE_SETUP.md  MIGRATION_GUIDE.md  PORTS.md  README.md  jest.config.ts  nest-cli.json  package.json  postman-collection.json  tsconfig.json
apps/api/docs/: AUTHENTICATION.md  DATABASE.md  MIGRATION_GUIDE.md  OAUTH_SETUP.md  README.md
apps/api/scripts/: dev-auto.ts  dev-setup.ts  dev-with-setup.sh
apps/api/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  data-source.ts  database-health-check.service.ts  main.ts  schema-comparison.ts  supabase-migration-sync.ts  supabase.client.ts  test-migration.ts
apps/api/src/auth/: auth.controller.ts  index.ts  (+2 more)
apps/api/test/: app.e2e-spec.ts  barcode.e2e-spec.ts  jest-e2e.json  product-search.e2e-spec.ts  setup-env.ts  tasks.service.spec.ts
apps/demo/: next.config.ts  package.json  tsconfig.json
apps/demo/.next/: react-loadable-manifest.json  trace
apps/demo/app/: page.tsx
apps/mobile/: .env.example  .env.production.example  .env.staging.example  .gitignore  AUTHENTICATION.md  README.md  app.config.js  babel.config.js  eas.json  evn.d.ts  metro.config.js  package.json  pnpm-lock.yaml  tsconfig.json  update-ip.js
apps/mobile/app/: _layout.tsx  debug.tsx  login.tsx  product-detail.tsx  product-selection.tsx  profile-edit.tsx  profile.tsx  rank.tsx  register-product.tsx  register-prompt.tsx  scan.tsx  signup.tsx  test-linking.tsx
apps/web/: .env.local.example  .env.production.example  .env.staging.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+319 files in other folders)
