[project]
name = "production-langgraph"
version = "1.0.0"
description = "Production AI environment with computer vision and ML capabilities"
dependencies = []

[dependency-groups]
# Core AI packages
ai-core = [
    "langgraph",
    "mistral"
]

# Computer Vision & Image Processing
vision = [
    "numpy",
    "opencv-contrib-python",
    "pytesseract", 
    "pillow",
    "scipy",
    "scikit-image",
    "imutils",
    "matplotlib"
]

# Machine Learning & Data Science
ml = [
    "scikit-learn",
    "tensorflow",
    "h5py"
]

# Web Scraping & Text Processing
web = [
    "requests",
    "beautifulsoup4",
    "textblob"
]

# Production runtime
prod = [
    "gunicorn==20.1.0",
    "uvicorn[standard]==0.18.0"
]

# Development tools
dev = [
    "pytest",
    "black",
    "mypy",
    "flake8",
    "jupyter",
    "jupyterlab",
    "ipykernel"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]