[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "production-langgraph"
version = "0.1.0"
description = "Price Tag OCR application with Modal integration and LangGraph"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "transformers>=4.30.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.18.0",
    "python-multipart>=0.0.5",
    "pillow>=9.5.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.16.0",
    "opencv-python>=4.7.0",
    "pydantic>=2.0.0",
    "modal>=0.55.0",
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.uv]
pip = { index-url = "https://pypi.org/simple" }

[tool.uv.install]
# System dependencies for OpenCV
system-packages = [
    "libgl1-mesa-glx",
    "libglib2.0-0",
    "libsm6",
    "libxext6",
    "libxrender-dev",
    "git-lfs",  # For downloading large model files
]

[tool.hatch.build.targets.wheel]
packages = ["."]